--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ authors = ["stefan <stefan.roesch1985@gmail.com>"]
 [dependencies]
 rocket = "0.2.8"
 rocket_codegen = "0.2.8"
+hyper = "0.11"
+futures = "0.1.14"
+tokio-core = "0.1"
+dotenv = "0.9.0"
+rocket_contrib = "0.2.8"
