--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ authors = ["stefan <stefan.roesch1985@gmail.com>"]
 [dependencies]
 rocket = "0.2.8"
 rocket_codegen = "0.2.8"
-hyper = "0.11"
-futures = "0.1.14"
-tokio-core = "0.1"
+hyper = "0.10"
 dotenv = "0.9.0"
 rocket_contrib = "0.2.8"
+serde = "0.9"
+serde_derive = "0.9"
