--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rocket = "0.2.8"
 rocket_codegen = "0.2.8"
 hyper = "0.10"
 dotenv = "0.9.0"
+log = "^0.3"
 rocket_contrib = "0.2.8"
 serde = "0.9"
 serde_derive = "0.9"
